--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,10 +25,8 @@
                                 @foreach (var img in images)
                                 {
                                     string active = img.Side == ImageSide.front ? "active" : "";
-                                    <img onclick="" src="@img.Url" style="object-fit: contain;" height="500" class="card-img px-3 @active" alt="@p.name">
-
+                                    <img src="@img.Url" style="object-fit: contain;" height="500" class="card-img px-3 @active" alt="@p.name">
                                 }
-
                                 <div class="indicators">
                                     @foreach (var img in images)
                                     {
