--- a/wwwroot/css/images_slider.css
+++ b/wwwroot/css/images_slider.css
@@ -12,25 +12,23 @@
   position: relative;
 }
 
-.images-slider .indicators {
-  position: absolute;
-  height: 5px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  bottom: 7px;
-  justify-content: center;
-}
-
-  .images-slider .indicators .indicator {
-    flex: 1 1 auto;
-    background-color: var(--main-text-color);
-    margin-left: 6px;
-    margin-right: 6px;
-    border-radius: 1em;
-    max-width: 50px;
+  .images-slider .indicators {
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    bottom: 5px;
+    justify-content: space-evenly;
   }
 
-    .images-slider .indicators .indicator.active {
-      background-color: var(--main-text-color-hover);
+    .images-slider .indicators .indicator {
+      flex: 0 0 100%;
+      background-color: var(--main-text-color);
+      border-radius: 1em;
+      max-width: 40px;
     }
+
+      .images-slider .indicators .indicator.active {
+        background-color: var(--main-text-color-hover);
+      }
