--- a/wwwroot/css/images_slider.css
+++ b/wwwroot/css/images_slider.css
@@ -19,15 +19,17 @@
     display: flex;
     flex-direction: row;
     bottom: 5px;
-    justify-content: space-evenly;
+    justify-content: center;
+    padding: 0 5px;
   }
 
-    .images-slider .indicators .indicator {
-      flex: 0 0 100%;
-      background-color: var(--main-text-color);
-      border-radius: 1em;
-      max-width: 40px;
-    }
+      .images-slider .indicators .indicator {
+        flex: 0 1 80%;
+        background-color: var(--main-text-color);
+        border-radius: 1em;
+        max-width: 30px;
+        margin: 0 5px;
+      }
 
       .images-slider .indicators .indicator.active {
         background-color: var(--main-text-color-hover);
