--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,10 +39,10 @@
                             <div class="card-body pt-0">
                                 <h5 class="card-title fa-2x text-center">@p.name</h5>
                                 <p class="card-text fa-sm text-center">
-                                    @{
+                               @*     @{
                                         var oldPrice = p.maxPrice + 1000;
                                     }
-                                  <strike class="me-1">@oldPrice <i class="fa fa-rub nohover"></i></strike>
+                                  <strike class="me-1">@oldPrice <i class="fa fa-rub nohover"></i></strike>*@
                                     @p.maxPrice <i class="fa fa-rub nohover"></i>
                                 </p>
                             </div>
