--- a/Views/Store/Productv2.cshtml
+++ b/Views/Store/Productv2.cshtml
@@ -52,11 +52,12 @@
                 }
                 <div class="carousel-inner">
                     @{
+                        var images = Model.images?.Where(i => i.Size == ImageSize.m).OrderBy(i => i.Side).ToList();
                         int index = 0;
-                        foreach (Image? image in Model?.images!)
+                        foreach (Image? image in images)
                         {
                             if (image.Size != ImageSize.m) continue;
-                            string active = index == 0 ? "active" : "";
+                            string active = image.Side == ImageSide.front ? "active" : "";
                             <div class="carousel-item @active" index="@index">
                                 <a class="fancybox" data-thumbs='{"autoStart":false}' href="@Model?.images.FirstOrDefault(i => i.FileName == image?.FileName?.Replace("m", "l"))?.Url" rel="gallery" data-fancybox="images-preview">
                                     <img src="@image.Url" class="w-100" alt="@Model?.name" style="object-fit: contain;" height="450">
@@ -81,10 +82,11 @@
                             <div class="owl-stage ps-0">
                                 @{
                                     index = 0;
-                                    foreach (Image? image in Model?.images!)
+                                    images = Model.images?.Where(i => i.Size == ImageSize.s).OrderBy(i => i.Side).ToList();
+                                    foreach (Image? image in images)
                                     {
                                         if (image.Size != ImageSize.s) continue;
-                                        string active = index == 0 ? "active" : "";
+                                        string active = image.Side == ImageSide.front ? "active" : "";
                                         <div class="owl-item">
                                             <div class="preview-item @active" index="@index">
                                                 <img src="@image.Url" alt="@Model?.name" style="object-fit: contain; width:100%" height="120">
