--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="~/lib/toolkit.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/labelholder/labelholder.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/chat.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/login-form.css" asp-append-version="true" />
     <style>
         body.loading aside, body.loading footer, body.loading #retailcrm-consultant-app {
             transition: 150ms;
