--- a/Views/Home/OrderV2.cshtml
+++ b/Views/Home/OrderV2.cshtml
@@ -83,6 +83,7 @@
 <h1 style="text-align:center">
     Заказ
     <b>№@Model.number</b>
+    <i class="fas fa-copy fa-xs" style="position:relative; top:-7px" onclick="navigator.clipboard.writeText(document.location.href).then(p => showMessage('Ссылка на заказ скопирована в буфер'))"></i>
 </h1>
 <hr>
 
@@ -211,14 +212,20 @@
                 <div class="sub-head">СТАТУС ЗАКАЗА</div>
                 @if (Model.status == "ozhidaem-oplatu" || Model.status == "new")
                 {
-                    <div>
-                        <span style="color:var(--bs-danger)">Заказ не оплачен, </span><a class="hover" disabled href="">оплатить онлайн</a>
+                    <div class="">
+                        Оплата:
+                        <span style="color:var(--bs-danger)">не оплачен, </span><a target="_blank" class="hover" href="@Url.ActionLink("Payment","Home", new{ orderNumber = Model.number })">оплатить онлайн</a>
                     </div>
                 }
                 else if (Model.status == "paid")
                 {
                     <div>
-                        <span style="color:var(--bs-success)">Заказ оплачен,</span> {статус производства}
+                        Оплата:
+                        <span style="color:var(--bs-success)">оплачен</span>
+                    </div>
+                    <div>
+                        Состояние:
+                        <span>в производстве</span>
                     </div>
                 }
             </div>
@@ -235,21 +242,24 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td style="text-align:center;">
-                            BERSERK
-                            (TBRSR-S-OVS)
-                        </td>
-                        <td style="text-align:center">
-                            <div>
-                                <img height="200"
-                                     src="https://s3-s1.retailcrm.tech/eu-central-1/retailcrm/yakutsa-8e898aa36d0b809c520692c01e1cccbc/product/623fae56dc0ef-_berserk_m_front.png">
-                            </div>
-                        </td>
-                        <td class="numeric">3&nbsp;000,00&nbsp;<span class="currency-symbol rub">₽</span></td>
-                        <td class="numeric">1</td>
-                        <td class="numeric">0,00&nbsp;<span class="currency-symbol rub">₽</span></td>
-                    </tr>
+                    @foreach (var product in Model.items)
+                    {
+                        <tr>
+                            <td style="text-align:center;">
+                                @product.offer.name
+                                (@product.offer.article)
+                            </td>
+                            <td style="text-align:center">
+                                <div>
+                                    <img height="200"
+                                     src="@product.offer.product.imageUrl">
+                                </div>
+                            </td>
+                            <td class="numeric">@product.initialPrice&nbsp;<span class="currency-symbol rub">₽</span></td>
+                            <td class="numeric">@product.quantity</td>
+                            <td class="numeric">@product.summ&nbsp;<span class="currency-symbol rub">₽</span></td>
+                        </tr>
+                    }
                 </tbody>
             </table>
             <div class="info ft-rg" style="text-align:right;">
