--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -911,9 +911,9 @@ ul {
   flex-direction: row;
 }
 
-  .inline-icons i.fa-door-closed {
+/* .inline-icons i.fa-door-closed {
     display: none;
-  }
+  }*/
 
 .top-bar {
   position: relative;
@@ -1299,24 +1299,28 @@ ul li {
   }
 
 
-.btn-group .btn-anim {
-  margin: 0 5px;
+.btn-group {
+  flex-wrap: wrap;
 }
 
+  .btn-group .btn-anim {
+    margin: 5px 5px;
+  }
 
-.btn-group .btn-anim {
-  /* animation-name: btn-animation;
+
+  .btn-group .btn-anim {
+    /* animation-name: btn-animation;
         animation-delay: 0;
         animation-direction: normal;
         animation-fill-mode: forwards;
         animation-play-state: running;
         animation-iteration-count: infinite;
         animation-duration: 4s;*/
-  /*  background-image: linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%);
+    /*  background-image: linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%);
         background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
         background-size: 8px 3px, 8px 3px, 3px 8px, 3px 8px;
         animation: btn-animation 0.5s linear infinite;*/
-}
+  }
 
 .btn-anim:not(.disabled):hover:after, .btn-anim.active:not(.disabled):after {
   /* animation-play-state: running;*/
