--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,123 +1,131 @@
 ﻿@model yakutsa.Models.Cart
 <div class="container mt-0">
-  <div class="row">
-    <h1 class="text-center">@ViewData["Title"]</h1>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-
-      @if (Model?.Count != 0)
-      {
-        <div data-reflow-type="shopping-cart">
-          <div class="reflow-shopping-cart">
-            <div class="ref-loading-overlay"></div>
-            <div class="ref-message" style="display: none;"></div>
-            <div class="ref-cart" style="display: block;">
-              <div class="ref-th">
-                <div class="ref-product-col">Наименование</div>
-                <div class="ref-price-col">Цена</div>
-                <div class="ref-quantity-col">Количество</div>
-                <div class="ref-total-col">Стоимость</div>
-              </div>
-              <div class="ref-cart-table">
-
-                @foreach (CartProduct? product in Model?.CartProducts!)
-                {
-                  <div class="ref-product" data-id="@product?.Product?.id">
-                    <div class="ref-product-col">
-                      <div class="ref-product-wrapper flex-column flex-sm-row">
-                        <a href="@Url.ActionLink( product?.Product?.name.ToLower(), product?.Product?.groups?.FirstOrDefault()?.name?.ToLower())">
-                          <img class="ref-product-photo" src="@product?.Product?.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" alt="@product?.Product?.name" />
-                        </a>
-                        <div class="ref-product-data">
-                          <div class="ref-product-info text-center">
-                            <div class="ref-product-name">@product.Product.name</div>
-
-
-                            @{
-                              var str = product.Offer?.Model != RetailCRMCore.Models.Model.Default ? product.Offer?.Model.GetDisplayName() : string.Empty;
-                              var productModel = str == string.Empty ? str : $"Модель: {str}";
-                            }
-
-                            <div class="ref-product-variants text-start">@productModel</div>
-                            <div class="ref-product-variants text-start">Размер: @product.Offer?.article.Split("-")[1]</div>
-                          </div>
-                          <div class="ref-product-price text-center">@product.Offer?.price <i class="fa fa-rub opacity-100 nohover"></i></div>
-                        </div>
-                      </div>
-                      <div class="ref-product-controls w-100">
-                        <div class="ref-product-quantity">
-                          <form action="@Url.ActionLink("ChangeCount", "Home")" method="post">
-                            <div class="ref-quantity-widget">
-                              <div class="ref-decrease">-</div>
-                              <input name="productId" type="hidden" value="@product.Product.id" />
-                              <input name="offerId" type="hidden" value="@product.Offer.id" />
-                              <input name="count" type="text" value="@product.Count" />
-                              <div class="ref-increase">+</div>
-                            </div>
-                            <div class="d-inline-block">
-                              <input class="ref-product-count px-1" style="background: transparent;color: white;border: none;" type="submit" value="Изменить" />
-                              <a href="@Url.ActionLink("RemoveFromCart", "Home", new { productId = @product.Product.id, offerId = @product.Offer.id })" class="ref-product-remove px-1">Удалить</a>
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-                      <div class="ref-product-summ"><span>@product.Price </span><i class="fa fa-rub opacity-100 nohover"></i></div>
-                    </div>
-                    <div class="ref-price-col">
-                      <div class="ref-product-price">@product.Offer.price <i class="fa fa-rub opacity-100 nohover"></i></div>
-                    </div>
-                    <div class="ref-quantity-col">
-                      <div class="ref-product-quantity">
-                        <form action="@Url.ActionLink("ChangeCount", "Home")" method="post">
-                          <div class="ref-quantity-widget">
-                            <div class="ref-decrease">-</div>
-                            <input name="productId" type="hidden" value="@product.Product.id" />
-                            <input name="offerId" type="hidden" value="@product.Offer.id" />
-                            <input name="count" type="text" value="@product.Count" />
-                            <div class="ref-increase">+</div>
-                          </div>
-                          <div class="d-inline-block">
-                            <input class="ref-product-count px-1" style="background: transparent;color: white;border: none;" type="submit" value="Изменить" />
-                            <a href="@Url.ActionLink("RemoveFromCart", "Home", new { productId = @product.Product.id, offerId = @product.Offer.id})" class="ref-product-remove px-1">Удалить</a>
-                          </div>
-                          @*  <div class="d-inline">@product.Price <i class="fa fa-rub"></i></div>*@
-                        </form>
-                      </div>
-                    </div>
-                    <div class="ref-total-col">
-                      <div class="ref-product-total">
-                        <div class="ref-product-total-sum">@product.Price <i class="fa fa-rub nohover"></i></div>
-                      </div>
-                    </div>
-                  </div>
-                }
-              </div>
-              <div class="ref-footer">
-                <div class="ref-links d-flex flex-column flex-sm-row">
-                  <a href="/RefundPolicy" target="_blank">Политика возврата</a>
-                  <a href="/DeliveryRules" target="_blank">Условия доставки</a>
-                </div>
-                <div class="ref-totals">
-                  <div class="ref-subtotal">ИТОГО: @Model?.Price <i class="fa fa-rub nohover"></i></div><br />
-                  <div class="btn-anim">
-                    <a class="btn btn-main px-4 ref-checkout-button" href="@Url.ActionLink("OrderOptions","Home")">Подтвердить</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      }
-      else
-      {
-        <p class="text-center">
-          Ваша корзина пока пуста...<a href="@Url.ActionLink("Index", "Home")#catalog"><br /><span style="text-decoration:underline;">Перейти в каталог</span></a>
-        </p>
-      }
+    <div class="row">
+        <h1 class="text-center">@ViewData["Title"]</h1>
     </div>
-  </div>
+
+    <div class="row">
+        <div class="col-md-12">
+
+            @if (Model?.Count != 0)
+            {
+                <div data-reflow-type="shopping-cart">
+                    <div class="reflow-shopping-cart">
+                        <div class="ref-loading-overlay"></div>
+                        <div class="ref-message" style="display: none;"></div>
+                        <div class="ref-cart" style="display: block;">
+                            <div class="ref-th">
+                                <div class="ref-product-col">Наименование</div>
+                                <div class="ref-price-col">Цена</div>
+                                <div class="ref-quantity-col">Количество</div>
+                                <div class="ref-total-col">Стоимость</div>
+                            </div>
+                            <div class="ref-cart-table">
+
+                                @foreach (CartProduct? product in Model?.CartProducts!)
+                                {
+                                    <div class="ref-product" data-id="@product?.Product?.id">
+                                        <div class="ref-product-col">
+                                            <div class="ref-product-wrapper flex-column flex-sm-row">
+                                                <a href="@Url.ActionLink( product?.Product?.name.ToLower(), product?.Product?.groups?.FirstOrDefault()?.name?.ToLower())">
+                                                    <img class="ref-product-photo" src="@product?.Product?.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" alt="@product?.Product?.name" />
+                                                </a>
+                                                <div class="ref-product-data">
+                                                    <div class="ref-product-info text-center">
+                                                        <div class="ref-product-name">@product.Product.name</div>
+
+
+                                                        @{
+                                                            var str = product.Offer?.Model != RetailCRMCore.Models.Model.Default ? product.Offer?.Model.GetDisplayName() : string.Empty;
+                                                            var productModel = str == string.Empty ? str : $"Модель: {str}";
+                                                        }
+
+                                                        <div class="ref-product-variants text-start">@productModel</div>
+                                                        <div class="ref-product-variants text-start">Размер: @product.Offer?.article.Split("-")[1]</div>
+                                                    </div>
+                                                    <div class="ref-product-price text-center">@product.Offer?.price <i class="fa fa-rub opacity-100 nohover"></i></div>
+                                                </div>
+                                            </div>
+                                            <div class="ref-product-controls w-100">
+                                                <div class="ref-product-quantity">
+                                                    <form action="@Url.ActionLink("ChangeCount", "Home")" method="post">
+                                                        <div class="ref-quantity-widget">
+                                                            <div class="ref-decrease">-</div>
+                                                            <input name="productId" type="hidden" value="@product.Product.id" />
+                                                            <input name="offerId" type="hidden" value="@product.Offer.id" />
+                                                            <input name="count" type="text" value="@product.Count" />
+                                                            <div class="ref-increase">+</div>
+                                                        </div>
+                                                        <div class="d-inline-block">
+                                                            <input class="ref-product-count px-1" style="background: transparent;color: white;border: none;" type="submit" value="Изменить" />
+                                                            <a href="@Url.ActionLink("RemoveFromCart", "Home", new { productId = @product.Product.id, offerId = @product.Offer.id })" class="ref-product-remove px-1">Удалить</a>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                            <div class="ref-product-summ"><span>@product.Price </span><i class="fa fa-rub opacity-100 nohover"></i></div>
+                                        </div>
+                                        <div class="ref-price-col">
+                                            <div class="ref-product-price">@product.Offer.price <i class="fa fa-rub opacity-100 nohover"></i></div>
+                                        </div>
+                                        <div class="ref-quantity-col">
+                                            <div class="ref-product-quantity">
+                                                <form action="@Url.ActionLink("ChangeCount", "Home")" method="post">
+                                                    <div class="ref-quantity-widget">
+                                                        <div class="ref-decrease">-</div>
+                                                        <input name="productId" type="hidden" value="@product.Product.id" />
+                                                        <input name="offerId" type="hidden" value="@product.Offer.id" />
+                                                        <input name="count" type="text" value="@product.Count" />
+                                                        <div class="ref-increase">+</div>
+                                                    </div>
+                                                    <div class="d-inline-block">
+                                                        <input class="ref-product-count px-1" style="background: transparent;color: white;border: none;" type="submit" value="Изменить" />
+                                                        <a href="@Url.ActionLink("RemoveFromCart", "Home", new { productId = @product.Product.id, offerId = @product.Offer.id})" class="ref-product-remove px-1">Удалить</a>
+                                                    </div>
+                                                    @*  <div class="d-inline">@product.Price <i class="fa fa-rub"></i></div>*@
+                                                </form>
+                                            </div>
+                                        </div>
+                                        <div class="ref-total-col">
+                                            <div class="ref-product-total">
+                                                <div class="ref-product-total-sum">@product.Price <i class="fa fa-rub nohover"></i></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                            <form id="promo_code_check" class="mb-3 input-group justify-content-end" method="post" action="@Url.ActionLink("CheckPromoCode", "Home")">
+                                <div class="labelholder">
+                                    <input required class="form-control p-2" type="text" name="promoCode.CodeText" placeholder="ПРОМОКОД" />
+                                </div>
+                                <div class="btn-anim">
+                                    <input class="btn btn-main" type="submit" value="ПРИМЕНИТЬ" />
+                                </div>
+                            </form>
+                            <div class="ref-footer">
+                                <div class="ref-links d-flex flex-column flex-sm-row">
+                                    <a href="/RefundPolicy" target="_blank">Политика возврата</a>
+                                    <a href="/DeliveryRules" target="_blank">Условия доставки</a>
+                                </div>
+                                <div class="ref-totals">
+                                    <div class="ref-subtotal">ИТОГО: @Model?.Price <i class="fa fa-rub nohover"></i></div><br />
+                                    <div class="btn-anim">
+                                        <a class="btn btn-main px-4 ref-checkout-button" href="@Url.ActionLink("OrderOptions","Home")">Подтвердить</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <p class="text-center">
+                    Ваша корзина пока пуста...<a href="@Url.ActionLink("Index", "Home")#catalog"><br /><span style="text-decoration:underline;">Перейти в каталог</span></a>
+                </p>
+            }
+        </div>
+    </div>
 </div>
 
 <script src="~/js/cart.js" type="text/javascript" asp-append-version="true"></script>
