--- a/Views/Home/Care.cshtml
+++ b/Views/Home/Care.cshtml
@@ -1,23 +1,31 @@
 ﻿<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center">@ViewData["Title"]</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center">@ViewData["Title"]</h1>
+        </div>
     </div>
-  </div>
-  <div class="row text-content">
-    <div class="col-xl-12 mx-auto">
-      @*  <h4 class="text-center">ВОЗВРАТ</h4>*@
-      <p>
-        Мы используем материалы только высокого качества для производства фирменной одежды, в том числе и качественные способы нанесения на них принтов. Чтобы ваша вещь долго сохраняла неизменный вид, стоит ознакомиться с инструкцией по уходу уже перед первой стиркой.
-      </p>
-      <p>
-        Перед стиркой обязательно выверните худи наизнанку (принтом внутрь). Рекомендуется ручная стирка, при ручной стирке принт не тереть, не замачивать, не кипятить. При стирке в стиральной машинке рекомендуется использовать быстрый (без температуры) или деликатный режим (не выше 30°). Обязательно установите отжим на минимальные обороты (не выше, чем 400). Запрещено использовать отбеливатели и пятновыводители.
-      </p>
-      <p>
-        Глажка по принту запрещена, худи рекомендуется гладить без пара, вывернув наизнанку.
-      </p>
+    <div class="row my-3">
+        <div class="col-sm-12">
+            <video class="fancybox-video" controls="" controlslist="nodownload" poster="~/img/care_poster.jpg" style="cursor:pointer;">
+                <source src="~/videos/care.mp4" type="video/mp4">Извините, Ваш браузер не поддерживается,
+                <a href="~/videos/care.mp4">сохраните видео</a> и посмотрите его на своем плеере!
+            </video>
+        </div>
     </div>
-  </div>
+    <div class="row text-content">
+        <div class="col-xl-12 mx-auto">
+            @*  <h4 class="text-center">ВОЗВРАТ</h4>*@
+            <p>
+                Мы используем материалы только высокого качества для производства фирменной одежды, в том числе и качественные способы нанесения на них принтов. Чтобы ваша вещь долго сохраняла неизменный вид, стоит ознакомиться с инструкцией по уходу уже перед первой стиркой.
+            </p>
+            <p>
+                Перед стиркой обязательно выверните худи наизнанку (принтом внутрь). Рекомендуется ручная стирка, при ручной стирке принт не тереть, не замачивать, не кипятить. При стирке в стиральной машинке рекомендуется использовать быстрый (без температуры) или деликатный режим (не выше 30°). Обязательно установите отжим на минимальные обороты (не выше, чем 400). Запрещено использовать отбеливатели и пятновыводители.
+            </p>
+            <p>
+                Глажка по принту запрещена, худи рекомендуется гладить без пара, вывернув наизнанку.
+            </p>
+        </div>
+    </div>
 </div>
 
 
