--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
 
 <div class="side-toggler">
     <div class="btn-anim">
-        <a class="btn btn-main" href="#catalog">КАТАЛОГ</a>
+        <a class="btn btn-main" href="#catalog" style="font-weight: 600;letter-spacing: 3px;">КАТАЛОГ</a>
     </div>
 </div>
 
